fix layout issue, decimals

--- a/packages/client/src/containers/liquidity-container.scss
+++ b/packages/client/src/containers/liquidity-container.scss
@@ -1,5 +1,7 @@
 .carousel-container {
     width: 650px;
+    min-height: 750px;
+    max-height: 800px;
 }
 
 .liquidity-carousel-item {
@@ -11,6 +13,7 @@
 
 .liquidity-container {
     width: 450px;
+    height: 750px;
     min-width: 225px;
     // background: radial-gradient(var(--bgDefault), var(--bgPrimary));
     background: #7033e5;
