--- a/packages/client/src/styles/app.scss
+++ b/packages/client/src/styles/app.scss
@@ -257,11 +257,9 @@ p {
     align-items: center;
     margin-bottom: 2rem;
 }
+
 .footer-tab-container {
-    position: fixed;
     color: var(--facePrimary);
-    bottom: 0;
-    left: 0;
     display: flex;
     justify-content: center;
     width: 100%;
